<resources>
    <string name="app_name">Teenslane</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_intro">IntroActivity</string>
    <string name="title_activity_userdetail_activinity">UserdetailActivinity</string>
    <string name="title_activity_user_detail">UserDetailActivity</string>
    <string name="title_activity_load">LoadActivity</string>
    <string name="title_activity_myprofile">MyprofileActivity</string>
    <string name="toast_not_connected">You are not connected to internet</string>
    <string name="toast_error_later">An error occurred. Please try again later</string>
    <string name="text_try_connect">Please set your internet connection and\npress button below</string>
    <string name="button_try_again">Try again</string>
    <string name="intro_notlogged_text_create">CREATE</string>
    <string name="intro_notlogged_text_profile">PROFILE</string>
    <string name="intro_logged_text_edit">EDIT</string>
    <string name="intro_logged_text_profile">PROFILE</string>
    <string name="intro_messages">Messages</string>
    <string name="intro_users">Users</string>
    <string name="intro_mypets">My Pets</string>
    <string name="intro_filter">Filter</string>
    <string name="intro_forum">Forum</string>
    <string name="intro_feed">Feed</string>
    <string name="intro_mapview">Map View</string>
    <string name="myprofile_heading">My Profile</string>
    <string name="myprofile_text_pickphoto_a">PICK</string>
    <string name="myprofile_text_pickphoto_b">A PHOTO</string>
    <string name="myprofile_nickname">Nickname</string>
    <string name="myprofile_nickname_hint">Type in your nickname</string>
    <string name="myprofile_gender">I am</string>
    <string name="myprofile_gender_hint">Select your gender</string>
    <string name="myprofile_looking_for">I am looking for</string>
    <string name="myprofile_looking_for_hint">Select from options</string>
    <string name="myprofile_dob">Date of birth</string>
    <string name="myprofile_dob_hint">Set your date of birth</string>
    <string name="myprofile_incognito">Incognito mode</string>
    <string name="myprofile_incognito_map">Hide me on the map</string>
    <string name="myprofile_incognito_search">Hide me on search results</string>
    <string name="myprofile_terms_sentence">I agree with the therm and conditions</string>
    <string name="myprofile_terms_link"><u>Terms and conditions</u></string>
    <string name="myprofile_terms_url">http://www.pike-apps.com/teenslane.html</string>
    <string name="myprofile_delete_account">Delete my account</string>
    <string name="myprofile_save_error">Please fill all data</string>
    <string name="myprofile_save_error_aged">You have to be between 13-19 years old</string>
    <string name="myprofile_save_error_terms">You have to agree with our Terms and conditions</string>
    <string name="myprofile_save_success">Your data have been saved</string>
    <string name="myprofile_image_save_success">Your image have been saved</string>
    <string name="myprofile_image_save_error">Your image have not been saved\nPlease try again</string>
    <string name="myprofile_about_me">About me</string>
    <string name="myprofile_about_me_hint">Write short info about yourself</string>
    <string name="myprofile_what_ilove">I love...</string>
    <string name="myprofile_what_ilove_hint">Select what do you love</string>
    <string name="myprofile_looks">Looks</string>
    <string name="myprofile_looks_body_hint">Body</string>
    <string name="myprofile_looks_height_hint">Height</string>
    <string name="myprofile_looks_weight_hint">Weight</string>
    <string name="myprofile_looks_eyes_hint">Eye Color</string>
    <string name="myprofile_looks_hair_hint">Hair Color</string>
    <string name="myprofile_looks_ethnicity_hint">Ethnicity</string>
    <string name="gender_man">Boy</string>
    <string name="gender_woman">Girl</string>
    <string name="body_sexy">Sexy</string>
    <string name="body_sporty">Sporty</string>
    <string name="body_slender">Slender</string>
    <string name="body_juicy">Juicy</string>
    <string name="body_muscle">Muscular</string>
    <string name="eye_color_brown">Brown</string>
    <string name="eye_color_gray">Gray</string>
    <string name="eye_color_black">Black</string>
    <string name="eye_color_green">Green</string>
    <string name="eye_color_blue">Blue</string>
    <string name="hair_color_brown">Brown</string>
    <string name="hair_color_black">Black</string>
    <string name="hair_color_red">Red</string>
    <string name="hair_color_blonde">Blonde</string>
    <string name="hair_color_bald">Bald</string>
    <string name="ethnicity_asian">Asian</string>
    <string name="ethnicity_black">Black</string>
    <string name="ethnicity_other">Other</string>
    <string name="ethnicity_latino">Latino</string>
    <string name="ethnicity_white">White</string>
    <string name="metric_metric_distance">km</string>
    <string name="metric_imperial_distance">miles</string>
    <string name="metric_metric_height">cm</string>
    <string name="metric_imperial_height">feet</string>
    <string name="metric_metric_weight">kg</string>
    <string name="metric_imperial_weight">lbs</string>
    <string name="teenslane_confirm">Confirm</string>
    <string name="teenslane_close">Close</string>
    <string name="teenslane_max_images">Maximum amount reached</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_gallery">GalleryActivity</string>
    <string name="teenslane_my_gallery">My Gallery</string>
    <string name="teenslane_gallery">Gallery</string>
    <string name="delete_confirm_title">Delete image</string>
    <string name="confirm_heading">Are you sure?</string>
    <string name="teenslane_cancel">Cancel</string>
    <string name="set_pwd_title">Set password</string>
    <string name="set_set_pwd_title">Please enter password</string>
    <string name="set_pwd_heading">Current password is:</string>
    <string name="set_pwd_input">Enter password</string>
    <string name="set_pwd_save">Save</string>
    <string name="set_pwd_enter">Enter</string>
    <string name="set_pwd_delete">Delete password</string>
    <string name="filter_title">Filter</string>
    <string name="filter_lookingfor">I am looking for</string>
    <string name="filter_lookingfor_input">Press to select</string>
    <string name="filter_age">Age</string>
    <string name="filter_age_input">Press to select</string>
    <string name="filter_age_from_input">From</string>
    <string name="filter_age_to_input">To</string>
    <string name="filter_dist_country">Choose distance or country</string>
    <string name="filter_distance_mylocation">From my location</string>
    <string name="filter_dist_country_promt">Choose country</string>
    <string name="filter_distance_country">Country</string>
    <string name="filter_distance_state_promt">Choose region/state</string>
    <string name="filter_distance_state">Region/State</string>
    <string name="filter_distance_city_promt">Choose city</string>
    <string name="filter_distance_city">City</string>
    <string name="filter_distance">Distance</string>
    <string name="filter_photo">Photo</string>
    <string name="filter_photo_input">Users only with photos</string>
    <string name="filter_loves">Loves</string>
    <string name="filter_loves_pets_photo">Loves, Pets, Photo</string>
    <string name="filter_loves_input">Select what they should love</string>
    <string name="filter_looks">Looks</string>
    <string name="filter_looks_body">Body</string>
    <string name="filter_looks_ethnicity">Ethnicity</string>
    <string name="filter_pets">My Pets</string>
    <string name="filter_pets_input">Show only people from My Pets</string>
    <string name="users_title">Users</string>
    <string name="title_activity_users">UsersActivity</string>
    <string name="title_activity_filter">FilterActivity</string>
    <string name="dialog_loading">Loading.\nPlease wait</string>
    <string name="dialog_loading_title">Loading...</string>
    <string name="nousers">There is no user matching your criteria. Try to change filter criteria.</string>
    <string name="nomoreusers">No more users</string>
    <string name="showmore">Show More</string>
    <string name="title_activity_galleryuser">GalleryuserActivity</string>
    <string name="maxoffset">You reached maximum amount of 300 users on view. This limit is set due to the application\'s memory.</string>
    <string name="distance_meter_disabled">disabled</string>
    <string name="map_disabled">is not sharing location</string>
    <string name="wrong_password">Wrong password</string>
    <string name="other_user_info">Info</string>
    <string name="other_user_description">About me</string>
    <string name="other_user_age">Age</string>
    <string name="other_user_age_years">years</string>
    <string name="other_user_gender">I am</string>
    <string name="other_user_looking_for">I am looking for</string>
    <string name="other_user_loves">I love</string>
    <string name="other_user_body">Body</string>
    <string name="other_user_ethnicity">Ethnicity</string>
    <string name="other_user_report">Report user</string>
    <string name="other_user_blacklist">Add to blacklist</string>
    <string name="other_user_blacklist_remove">Remove from blacklist</string>
    <string name="report_abuse">Report rude/abuse</string>
    <string name="report_fake">Report fake photo</string>
    <string name="report_inappropriate">Report inappropriate photo</string>
    <string name="report_spam">Report spam/scam</string>
    <string name="report_toast"> reported</string>
    <string name="useraction_pets_in_confirm">Add user to pets</string>
    <string name="useraction_pets_out_confirm">Remove user from pets</string>
    <string name="useraction_pets_in_toast"> added to your pets</string>
    <string name="useraction_pets_out_toast"> removed your pets</string>
    <string name="sendmessage_input_hint">Write message</string>
    <string name="sendmessage_input_button">SEND</string>
    <string name="showolder_messages">Show older messages</string>
    <string name="newmessage_from">New message from</string>
    <string name="title_activity_messages">MessagesActivity</string>
    <string name="messages_title">Messages</string>
    <string name="title_activity_mypets">MypetsActivity</string>
    <string name="mypets_title">My Pets</string>
    <string name="title_activity_myfeed">MyfeedActivity</string>
    <string name="myfeed_title">Feed</string>
    <string name="other_feed_title">feed</string>
    <string name="feedgrammar_you">you</string>
    <string name="feedgrammar_your">your</string>
    <string name="feedgrammar_from">from</string>
    <string name="feedgrammar_to">to</string>
    <string name="feedgrammer_profile">profile</string>
    <string name="feedgrammer_to_pets">to pets</string>
    <string name="feedgrammer_from_pets">from pets</string>
    <string name="feedgrammar_send">send</string>
    <string name="feedgrammar_received">received</string>
    <string name="feedgrammar_image">image</string>
    <string name="feed_viewed">viewed</string>
    <string name="feed_update_status">What is on your mind?</string>
    <string name="feed_update_status_empty">Status can not be empty</string>
    <string name="feed_pets_added">added</string>
    <string name="feed_pets_removed">removed</string>
    <string name="feed_kiss">kissed</string>
    <string name="feed_slap">slapped</string>
    <string name="feed_badge">badge</string>
    <string name="feed_gift">gift</string>
    <string name="feed_rate_hot">HOT</string>
    <string name="feed_rate_wtf">WTF</string>
    <string name="feed_rate">marked your image as</string>
    <string name="feed_rate_profile">marked your profile image as</string>
    <string name="feed_profile_image_changed">changed profile picture</string>
</resources>