<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/ethnicity_asian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingLeft="60dp"
            android:text="@string/ethnicity_asian" />

        <RadioButton
            android:id="@+id/ethnicity_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ethnicity_asian"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingLeft="60dp"
            android:text="@string/ethnicity_black" />

        <RadioButton
            android:id="@+id/ethnicity_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ethnicity_black"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingLeft="60dp"
            android:text="@string/ethnicity_other" />

        <RadioButton
            android:id="@+id/ethnicity_latino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ethnicity_other"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingLeft="60dp"
            android:text="@string/ethnicity_latino" />

        <RadioButton
            android:id="@+id/ethnicity_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ethnicity_latino"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingLeft="60dp"
            android:text="@string/ethnicity_white" />

        <Button
            android:id="@+id/ethnicity_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ethnicity_white"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/teenslane_confirm" />

</RelativeLayout>