<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dp" >

    <TextView
        android:id="@+id/current_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp"
        android:text="@string/set_pwd_heading"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/set_pwd_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/current_pwd"
        android:layout_alignParentTop="false"
        android:layout_below="@+id/current_pwd"
        android:ems="10"
        android:hint="@string/set_pwd_input"
        android:imeOptions="actionDone"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/set_pwd_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/set_pwd_input"
        android:layout_alignBottom="@+id/set_pwd_input"
        android:layout_alignParentRight="true"
        android:text="@string/set_pwd_save" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/set_pwd_confirm"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" >

        <Button
            android:id="@+id/set_pwd_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/set_pwd_delete" />

        <Button
            android:id="@+id/set_pwd_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/set_pwd_delete"
            android:layout_toRightOf="@+id/set_pwd_delete"
            android:text="@string/teenslane_cancel" />

    </RelativeLayout>

</RelativeLayout>