<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/gender_man"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingLeft="60dp"
            android:text="@string/gender_man" />

        <RadioButton
            android:id="@+id/gender_woman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/gender_man"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingLeft="60dp"
            android:text="@string/gender_woman" />

        <Button
	        android:id="@+id/gender_confirm"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/gender_pair_gay"
	        android:layout_centerHorizontal="true"
	        android:layout_marginBottom="10dp"
	        android:layout_marginTop="15dp"
	        android:text="@string/teenslane_confirm" />

</RelativeLayout>