<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dp" >

    <EditText
        android:id="@+id/set_pwd_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:ems="10"
        android:hint="@string/set_pwd_input"
        android:imeOptions="actionDone"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/set_pwd_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/set_pwd_input"
        android:layout_alignBottom="@+id/set_pwd_input"
        android:layout_alignParentRight="true"
        android:text="@string/set_pwd_enter" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/set_pwd_confirm"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" >

        <Button
            android:id="@+id/set_pwd_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teenslane_cancel" />

    </RelativeLayout>

</RelativeLayout>