<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="300dp"
    android:padding="10dp" >

    <TextView
        android:id="@+id/confirm_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/confirm_heading"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="14sp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirm_heading"
        android:layout_centerHorizontal="true" >

        <Button
            android:id="@+id/confirm_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/teenslane_confirm" />

        <Button
            android:id="@+id/confirm_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/confirm_confirm"
            android:layout_marginLeft="40dp"
            android:layout_toRightOf="@+id/confirm_confirm"
            android:text="@string/teenslane_cancel" />

    </RelativeLayout>

</RelativeLayout>